2000-01-23  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/token.c, router/rfc822hdrs.c:
	    Turn all header start spaces to optimized TABs plus spaces.

	* smtpserver/smtpcmds.c:
	    Now (!) people tell me that the most common
	    M$ email clients are absolutely stupid, and won't be able
	    to correlate outgoing SMTP verbs to responses they receive.
	    They just tell to user the error which Z returns, and as
	    it doesn't repeat the address in fault (why should it?),
	    user has no clue...
	    (So the one-line reports will from now on also mention the
	     received address...)

	* utils/mxverify/Makefile.in, utils/mxverify/mxverify-cgi.c,
	  utils/mxverify/mxverify-cgi.html, utils/Makefile.in,
	  utils/mxverify-cgi.c, utils/mxverify-cgi.html
	    Moved the thing to subdirectory.
	    Now it can be compiled without compiling the *entire*
	    other ZMailer -- just:
		./configure --prefix=/usr
		cd utils/mxverify ; make

2000-01-20  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* utils/listexpand.c:
	    Added parametrization on how large bundles to make.
	    Default is the same old 200..

	* transports/smtp/smtp.c:
	    Turned out that Linux glibc 2.1 getaddrinfo() has some
	    strange bugs when it is left to its devices to scan for
	    a generic address suite -- it doesn't scan only IPv4 and
	    IPv6, but also some others, and if it gets error anywhere,
	    it seems to barf..  Will now scan for IPv4 and IPv6
	    separately :-/  So much for the great transparent API ...

	* utils/mxverify-cgi.c, utils/mxverify-cgi.html:
	    Detected the above problem while playing with this utility,
	    and developed that change here..
	    Reworked quite some things after initial deployment, added
	    that page into CVS for supplementary info.

2000-01-19  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* include/ta.h,           transports/libta/diagnostic.c,
	  transports/smtp/smtp.c, transports/libta/tasyslog.c:
	    Report (at smtp) also the conversion mode used