@@ -1,3 +1,8 @@
+2000-01-24  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* transports/smtp/smtp.c, transports/smtp/smtptls.c:
+	    More debug stuff for hunting strance message breaks..
+
 2000-01-23  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* lib/token.c, router/rfc822hdrs.c:
